<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/fragment"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_vertical_margin"
              android:paddingRight="@dimen/activity_vertical_margin"
              android:paddingTop="@dimen/activity_horizontal_margin"
              app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/lblVehicleInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/lbl_vehicle"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="10">

        <EditText
            android:id="@+id/editDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:width="180dip"
            android:focusable="false"
            android:hint="@string/hnt_setDate"
            android:inputType="date"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/editLitres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/editDate"
                android:width="140dip"
                android:hint="@string/hnt_fuelVolume"
                android:inputType="numberDecimal">

                <requestFocus/>
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dip"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:width="120dip"
                android:hint="@string/hnt_totalCost"
                android:inputType="numberDecimal"
                android:nextFocusDown="@+id/editOdometer"
                />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilOdo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/editOdometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/buttonSave"
                android:layout_alignParentStart="true"
                android:width="180dip"
                android:hint="@string/hnt_Odo"
                android:inputType="numberDecimal"
                android:nextFocusDown="@+id/buttonSave"/>


        </android.support.design.widget.TextInputLayout>

        <TextView
            android:text="@string/lbl_costPerVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_costPerUnit"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/btn_Save"/>

</LinearLayout>