<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:cardview="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:animateLayoutChanges="true"
                                    cardview:cardElevation="0dp"
                                    cardview:cardPreventCornerOverlap="false"
                                    cardview:cardUseCompatPadding="true"
                                    android:id="@+id/card"
                                    android:clickable="true"
                                    android:foreground="?android:attr/selectableItemBackground">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/tableRow">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/rowDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:hint="@string/lbl_Date"
                android:textSize="24sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/rowLitres"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_weight="1"
                android:hint="@string/lbl_UnitLitres"/>

            <TextView
                android:id="@+id/rowCost"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:hint="@string/lbl_Cost"
                android:singleLine="false"/>

            <TextView
                android:id="@+id/rowOdo"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_gravity="right"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:gravity="right"
                android:hint="@string/lbl_Odometer"/>

        </TableRow>

    </TableLayout>
</android.support.v7.widget.CardView>

    <!--<ImageButton
        android:id="@+id/rowButton"
        android:src="@drawable/ic_delete_forever"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/btn_Delete"/>-->